syntax = "proto3";

package demo;

option java_multiple_files = true;
option java_package = "com.binara.hellomessage";
option java_outer_classname = "WarmingProto";
option objc_class_prefix = "STD";

service Warming {
    rpc welcome (WelcomeRequest) returns (WelcomeResponse) {}
}

message WelcomeRequest {
    string helloMessage = 1;
}

message WelcomeResponse {
    string fullReply = 1;
}